--- a/public/assets/scss/components/_text.scss
+++ b/public/assets/scss/components/_text.scss
@@ -79,6 +79,7 @@
         @include mixins.text(body);
         margin-inline: 0;
         margin-block: 1em;
+        text-wrap: pretty;
     }
 
     &__big {
