--- a/public/assets/scss/layout/_about.scss
+++ b/public/assets/scss/layout/_about.scss
@@ -50,6 +50,10 @@ $uhd-height: 1248px;
         border-radius: 2rem;
         position: relative;
 
+        &--headshot {
+            object-position: top center;
+        }
+
         &--landscape {
             width: min(var(--container), #{$tablet-width});
             height: min(var(--container), #{$tablet-height});
@@ -66,6 +70,22 @@ $uhd-height: 1248px;
         }
     }
 
+    &__text {
+        margin-block: var(--margin-h);
+        width: min(var(--container), #{$tablet-width});
+        height: auto;
+        padding: var(--margin);
+    }
+
+    &__headshot {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+        border-radius: 0;
+        object-position: top center;
+    }
+
 }
 
 @media (orientation: landscape) and (min-width: map.get(tokens.$breakpoints, tablet)) {
@@ -79,6 +99,8 @@ $uhd-height: 1248px;
 
         &__section {
             flex-direction: row;
+            justify-content: space-between;
+            inline-size: var(--project-section);
         }
 
         &__frame {
@@ -96,6 +118,10 @@ $uhd-height: 1248px;
                 width: min(var(--col-half), #{$tablet-height});
                 aspect-ratio: 4 / 5;
             }
+        }
+
+        &__text {
+            width: var(--col-half);
         }
     }
 }
